--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,26 @@ video {
   display: block;
 }
 
+body {
+  padding: 20px;
+  font-family: "roboto", sans-serif;
+  background: rgb(245, 245, 245);
+}
+
+h3 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.section {
+  padding: 10px;
+  background: white;
+}
+
+.section + .section {
+  margin-top: 150px;
+}
+
 .row + .row {
   margin-top: 16px;
 }
@@ -25,4 +45,22 @@ video {
   padding-bottom: 12px;
   background-color: rgba(86, 61, 124, 0.15);
   border: 1px solid rgba(86, 61, 124, 0.2);
+}
+
+.page-header {
+  background: #83c5be;
+}
+
+.page-content {
+  background: #ffddd2;
+}
+
+.page-footer {
+  background: #006d77;
+}
+
+header,
+main,
+footer {
+  padding: 16px 0px;
 }
